// docs/intern/design.md の 第2版 ER 図と 1 対 1 で対応する。
// 日付・時刻は DateTime で持つ。ただし TherapistWorkHours の startAt / endAt だけは
// 「毎週この曜日はこの時刻」という繰り返しルールで、特定の日付を持たない。
// 日付部分はダミー値（1970-01-01T..Z）とし、時刻部分だけを見る（design.md の設計上の判断を参照）。

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

/// 利用者・マッサージ師・管理者の共通アカウント。自己登録は無く、管理者が登録する。
model User {
  id       String  @id @default(cuid())
  name     String // 表示名（仮名）
  email    String  @unique // ログイン ID
  password String // ハッシュ化済み（lib/password.ts）
  role     String // "user" | "therapist" | "admin"
  gender   String // "female" | "male"。全員必須（マッサージ師は空き枠の絞り込みに使う）
  active   Boolean @default(true)

  therapist             Therapist?
  reservations          Reservation[]      @relation("ReservationUser")
  cancelledReservations Reservation[]      @relation("ReservationCancelledBy")
  registeredAbsences    TherapistAbsence[]
  notifications         Notification[]
}

/// マッサージ師。表示名は User.name、性別は User.gender を使うため、ここには持たない
/// （同じ情報を 2 か所に持たない）。この表は「勤務」に関することだけを扱う。
model Therapist {
  id     String  @id @default(cuid())
  user   User    @relation(fields: [userId], references: [id])
  userId String  @unique
  active Boolean @default(true)

  // マッサージ師紹介画面（画面 3）用の紹介文。管理画面からの編集は対象外（表示のみ）
  bio             String @default("")
  experienceYears Int    @default(0)
  tags            String @default("") // カンマ区切りの短いタグ（例: "肩・首,やさしめ"）

  workHours    TherapistWorkHours[]
  absences     TherapistAbsence[]
  reservations Reservation[]
}

/// 施術ベッド。台数が変わってもデータ追加だけで対応できるようテーブルで持つ。
model Bed {
  id           String        @id @default(cuid())
  name         String
  active       Boolean       @default(true)
  reservations Reservation[]
}

/// 既定（平日 9:00〜14:00・15:00〜20:00。lib/business-hours.ts）と違う曜日・時間で働く人だけが持つ例外。
/// 1 行 = 1 曜日ぶんの勤務。その人の行が 1 件でもあれば既定は見ず、その行だけを使う。
model TherapistWorkHours {
  id          String    @id @default(cuid())
  therapist   Therapist @relation(fields: [therapistId], references: [id])
  therapistId String
  dayOfWeek   Int // 0(日)〜6(土)。Date.getDay() と揃える
  startAt     DateTime // その曜日の勤務開始（時刻だけ使う）
  endAt       DateTime // その曜日の勤務終了（時刻だけ使う）

  @@index([therapistId])
}

/// 急な欠勤。登録すると重なる予約は自動キャンセルされる（app/actions/shifts.ts）。
model TherapistAbsence {
  id          String    @id @default(cuid())
  therapist   Therapist @relation(fields: [therapistId], references: [id])
  therapistId String
  startAt     DateTime
  endAt       DateTime
  reason      String?
  createdBy   User      @relation(fields: [createdById], references: [id])
  createdById String

  @@index([therapistId, startAt])
}

/// 予約。押さえる枠は「施術時間 + 15 分」（+15 分は清掃・準備）。
/// キャンセルされても物理削除せず status を変える（利用実績として残すため）。
model Reservation {
  id           String    @id @default(cuid())
  user         User      @relation("ReservationUser", fields: [userId], references: [id])
  userId       String
  bed          Bed       @relation(fields: [bedId], references: [id])
  bedId        String
  therapist    Therapist @relation(fields: [therapistId], references: [id])
  therapistId  String
  startAt      DateTime // 施術開始日時
  treatmentMin Int // 15 | 30 | 45
  endAt        DateTime // 施術 + 15 分の枠終了日時
  status       String    @default("booked") // "booked" | "cancelled"
  note         String?
  createdAt    DateTime  @default(now())

  cancelledBy   User?     @relation("ReservationCancelledBy", fields: [cancelledById], references: [id], onDelete: SetNull)
  cancelledById String?
  cancelReason  String?
  cancelledAt   DateTime?

  notifications Notification[]

  @@index([startAt])
  @@index([status])
}

/// 通知。実際には送信しない（D-2）。「誰に・どの経路で・何を・いつ送るか」を記録し、
/// 管理画面（/admin/notifications）で一覧表示するためだけに使う。
model Notification {
  id            String      @id @default(cuid())
  reservation   Reservation @relation(fields: [reservationId], references: [id])
  reservationId String
  toUser        User        @relation(fields: [toUserId], references: [id])
  toUserId      String
  kind          String // "reserved" | "reminder" | "cancelled"
  channel       String // "email" | "slack"
  subject       String
  body          String
  scheduledAt   DateTime // 送る予定の日時
  sentAt        DateTime? // 疑似送信した日時（未送信は null）

  @@index([toUserId])
}
