erDiagram
  USER ||--o{ RESERVATION : "予約する"
  USER ||--o| THERAPIST : "マッサージ師である"
  USER ||--o{ NOTIFICATION : "宛先になる"
  THERAPIST ||--o{ THERAPIST_ABSENCE : "休む"
  THERAPIST ||--o{ THERAPIST_WORK_HOURS : "既定と違う曜日・時間で働く"
  THERAPIST ||--o{ RESERVATION : "施術する"
  BED ||--o{ RESERVATION : "使われる"
  RESERVATION ||--o{ NOTIFICATION : "きっかけになる"

  USER {
    string id "u1..."
    string name "表示名（仮名）"
    string email "ログイン ID"
    string password "管理者が登録し本人に渡す"
    string role "user / therapist / admin"
    string gender "male / female（全員必須）"
    boolean active "無効化に使う"
  }
  THERAPIST {
    string id "t1..."
    string userId "USER.id（必須。表示名と性別は User 側を使うので持たない）"
    boolean active "退職・休職に使う"
    string bio "紹介文（画面 4: マッサージ師紹介）"
    int experienceYears "経験年数（画面 4）"
    string tags "カンマ区切りの短いタグ（画面 4）"
  }
  BED {
    string id "b1, b2, b3"
    string name "ベッド A / B / C"
    boolean active "台数変更に使う"
  }
  THERAPIST_ABSENCE {
    string id "ta1..."
    string therapistId "THERAPIST.id"
    datetime startAt "休む開始日時 2026-09-10 09:00"
    datetime endAt "休む終了日時 2026-09-10 14:00"
    string reason "任意。体調不良 など"
    string createdById "USER.id（登録した管理者）"
  }
  THERAPIST_WORK_HOURS {
    string id "tw1..."
    string therapistId "THERAPIST.id"
    int dayOfWeek "0(日)〜6(土)。この曜日 1 日ぶんの勤務を表す"
    datetime startAt "その曜日の勤務開始（時刻だけ使う。例 1970-01-01T09:00）"
    datetime endAt "その曜日の勤務終了（時刻だけ使う）"
  }
  RESERVATION {
    string id "r1..."
    string userId "USER.id（誰が受けるか）"
    string bedId "BED.id"
    string therapistId "THERAPIST.id"
    datetime startAt "施術開始日時 2026-09-08 09:00"
    int treatmentMin "15 / 30 / 45"
    datetime endAt "施術 + 15 分の枠終了日時"
    string status "booked / cancelled"
    string note "備考（任意）"
    datetime createdAt "予約した日時"
    string cancelledById "USER.id（誰が取り消したか）"
    string cancelReason "取り消しの理由"
    datetime cancelledAt "取り消した日時"
  }
  NOTIFICATION {
    string id "n1..."
    string reservationId "RESERVATION.id"
    string toUserId "USER.id"
    string kind "reserved / reminder / cancelled"
    string channel "email / slack"
    string subject "件名"
    string body "本文"
    datetime scheduledAt "送る予定の日時"
    datetime sentAt "疑似送信した日時（未送信は null）"
  }
